# yt_downloader

./: .gitignore  Makefile  README.md  pyproject.toml
tests/: test_downloader.py
yt_downloader/: arg_parser.py  downloader.py  gui_downloader.py
yt_downloader/scripts/: download.py  gui_download.py
